Updated to Java 16 and MC 1.17, added glow item frames log.